@@ -1,3 +1,9 @@
+2003-01-18  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 03652] Re: Debian bug #176981
+	* file.c (checkHeader): always remove_space
+		(loadGeneralFile): no need remove_space
+
 2003-01-18  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03651] Debian bug #176981
